--- a/app/views/shared/_bottom_navbar.html.erb
+++ b/app/views/shared/_bottom_navbar.html.erb
@@ -6,12 +6,18 @@
         <%= link_to leaderboard_path do %>
      <i class="fa-solid fa-trophy"></i>
     <% end %>
-    <%= link_to notifications_path(current_user.username) do %>
+    <% if user_signed_in? %>
+      <%= link_to notifications_path(current_user.username) do %>
+        <i class="fa-solid fa-bell"></i>
+        <% if current_user.notifications.unread.length > 0 %>
+          <div class="notification_no position-absolute mt-1 translate-middle badge rounded-circle bg-danger">
+            <%=current_user.notifications.unread.length %>
+          </div>
+        <% end %>
+      <% end %>
+    <% else %>
+      <%= link_to new_user_session_path do %>
       <i class="fa-solid fa-bell"></i>
-      <% if current_user.notifications.unread.length > 0 %>
-        <div class="notification_no position-absolute mt-1 translate-middle badge rounded-circle bg-danger">
-          <%=current_user.notifications.unread.length %>
-        </div>
       <% end %>
     <% end %>
     <% if user_signed_in? %>
