updated notification styling

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Notifications</h1>
+<div class="container">
+<h1 class="mt-2">Notifications</h1>
+<div class="line border-bottom" style="width: 90%"></div>
 <%= render @notifications %>
+</div>
