--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,3 +1,22 @@
-<div class="p-4">
-<%= link_to notification.to_notification.message, notification.to_notification.url %>
+<div class="notifications">
+<div id="notification" class="card mt-1 mb-1">
+  <div class="section">
+    <%= link_to cl_image_tag(notification.to_notification.lock.photo.key, class: "avatar stretched-link") , lock_path(notification.to_notification.lock.id) %>
+  <div id="new_lock" class="position-absolute mt-0 mb-0">
+          <i class="fa-solid fa-circle-plus"></i>
+        </div>
+  </div>
+  <div class="section mt-auto mb-auto">
+    <div class="p-1">
+      <h6 class="mb-0"><%= link_to "New Lock Added!", notification.to_notification.url,  :class => "stretched-link text-decoration-none" %></h6>
+      <p class="mb-0"><%= notification.to_notification.message %></p>
+      <% if  ((DateTime.now.in_time_zone("Atlantic/Azores") - notification.created_at))/60 > 59 %>
+      <p class="mb-0" id="time"> <%= (((DateTime.now.in_time_zone("Atlantic/Azores") - notification.created_at)/60)/60).round %> Hrs</p>
+      <% else %>
+      <p class="mb-0" id="time"><%= (((DateTime.now.in_time_zone("Atlantic/Azores") - notification.created_at))/60).round %> Mins </p>
+      <% end %>
+    </div>
+  </div>
+</div>
+<div class="line border-bottom" style="width: 90%"></div>
 </div>
