--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,4 +1,5 @@
 <div class="notifications">
+<% if notification.type == 'LockSuggestionNotification' %>
 <div id="notification" class="card mt-1 mb-1">
   <div class="section">
     <%= link_to cl_image_tag(notification.to_notification.lock.photo.key, class: "avatar stretched-link") , lock_path(notification.to_notification.lock.id) %>
@@ -20,3 +21,29 @@
 </div>
 <div class="line border-bottom" style="width: 90%"></div>
 </div>
+<% end %>
+
+
+<% if notification.type == 'WelcomeNotification' %>
+<div id="notification" class="card mt-1 mb-1">
+  <div class="section">
+    <%= link_to cl_image_tag(notification.to_notification.user.photo.key, class: "avatar stretched-link") , root_path %>
+  <div id="new_lock" class="position-absolute mt-0 mb-0">
+          <i class="fa-solid fa-key"></i>
+        </div>
+  </div>
+  <div class="section mt-auto mb-auto">
+    <div class="p-1">
+      <h6 class="mb-0"><%= link_to "Welcome to Melbourne Unlocked", notification.to_notification.url,  :class => "stretched-link text-decoration-none" %></h6>
+      <p class="mb-0"><%= notification.to_notification.message %></p>
+      <% if  ((DateTime.now.in_time_zone("Atlantic/Azores") - notification.created_at))/60 > 59 %>
+      <p class="mb-0" id="time"> <%= (((DateTime.now.in_time_zone("Atlantic/Azores") - notification.created_at)/60)/60).round %> Hrs</p>
+      <% else %>
+      <p class="mb-0" id="time"><%= (((DateTime.now.in_time_zone("Atlantic/Azores") - notification.created_at))/60).round %> Mins </p>
+      <% end %>
+    </div>
+  </div>
+</div>
+<div class="line border-bottom" style="width: 90%"></div>
+</div>
+<% end %>
