--- a/app/views/locks/index.html.erb
+++ b/app/views/locks/index.html.erb
@@ -1,7 +1,7 @@
 
 
 
-
+  <title>Melbourne Unlocked</title>
   <div class = "position-absolute" style="width: 100%; height: 100%;"
     data-controller="mapbox"
     data-mapbox-markers-value="<%= @markers.to_json %>"
