--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<title>Sign up - Melbourne Unlocked</title>
 <div class="container justify-content-center">
 <h2>Sign up</h2>
 <p>Start unlocking locks and having an adventure in Melbourne today!</p>
