--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -1,3 +1,4 @@
+<title><%= @lock.name %></title>
 <div class="profile_banner">
         <%= cl_image_tag(@lock.photo.key, class: "avatar") %>
         <h1><%= @lock.name %></h1>
