--- a/app/views/locks/view_requests.html.erb
+++ b/app/views/locks/view_requests.html.erb
@@ -1,4 +1,4 @@
-
+<title>View Requests</title>
 <h1 style="margin-top: 10px; margin-bottom: 10px;">View all locks submissions</h1>
 <div class="container">
     <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
