--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,3 +1,4 @@
+<title><%= @user.username %>'s Profile</title>
 <div class="profile_banner">
         <%= cl_image_tag(@user.photo.key, class: "avatar") %>
         <h1><%= @user.username %>'s Profile Page</h1>
