--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta property="og:url" content="https://www.unlocked.melbourne/" />
+    <meta property="og:title" content="Melbourne Unlocked" />
+    <meta property="og:description" content="Explore Melbourne in the most rewarding way!" />
+    <meta property="og:image" content="https://www.unlocked.melbourne/assets/melbourne_unlocked_low_res-acd6f916dc10eb0e8a683047518e03d38411fdc679806cc1428002022b68e8ab.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
