--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -4,3 +4,13 @@
 @import "leaderboard";
 @import "lock_show";
 @import "search_bar";
+
+body > div.position-absolute.mapboxgl-map > div.mapboxgl-popup.mapboxgl-popup-anchor-center > div.mapboxgl-popup-content > button {
+  color: $unlocked_dark;
+  border-radius: 100%;
+  font-size: x-large;
+  padding: 3px 7px 3px 7px;
+  margin-bottom: 10px;
+  top: 10px;
+  right: 9px;
+}
