--- a/app/views/locks/_info_window.html.erb
+++ b/app/views/locks/_info_window.html.erb
@@ -23,7 +23,7 @@
   <p><strong>Unlocked:</strong>
         <% if Visit.where(user_id: current_user, lock_id: lock.id).exists? %>
           <% visit = Visit.where(user_id: current_user, lock_id: lock.id).first %>
-          <%= visit.unlocked_date %>
+          <%= visit.unlocked_date.strftime "%dth %^b %Y" %>
         <% end %>
 </div>
 </div>
