--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -54,10 +54,8 @@
 
           <div class="address_box">
             <div class="address_map">
-              <div style="width: 120px; height: 120px; border-radius: 100%;"
-                  data-controller="mapbox"
-                  data-mapbox-markers-value="<%= @marker.to_json %>"
-                  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+              <div style="width: 120px; height: 120px; border-radius: 100%;">
+              <img src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/url-https%3A%2F%2Fwww.unlocked.melbourne%2Fassets%2Fmelbourne_unlocked_low_res.png(<%=@lock.longitude%>,<%= @lock.latitude%>)/<%=@lock.longitude%>,<%= @lock.latitude%>,15/120x120?access_token=<%= ENV['MAPBOX_API_KEY'] %>" alt="">
               </div>
             </div>
             <div class="address_text">
