more review tab styling

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,6 +12,7 @@ $light-gray: #F4F4F4;
 $unlocked-blue: #00A79D;
 $unlocked-light: #b0dfe0;
 $unlocked-dark: #065863;
+$unlocked-gray-dark: #8d8d8d;
 $unlocked-gray: #c6c6c6;
 $unlocked-gray-light: #d7d7d7;
 $unlocked-orange: #fabc19;
