--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -93,8 +93,9 @@
 }
 
 .cards-home .day-month {
-  left: 80px;
+  left: 83px;
   top: 93px;
   padding-left: 3px;
   padding-right: 3px;
+  width: 30px;
 }
