--- a/app/assets/stylesheets/pages/_lock_show.scss
+++ b/app/assets/stylesheets/pages/_lock_show.scss
@@ -31,3 +31,26 @@ text-align: left;
   margin-top: auto;
   margin-bottom: auto;
 }
+
+.accordion-item:last-of-type .accordion-button.collapsed {
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+  background-color: $unlocked-gray-light;
+}
+
+.accordion-flush .accordion-item .accordion-button {
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+  background-color: $unlocked-gray-light;
+}
+
+#flush-headingOne > button > p {
+  color: $unlocked_dark;
+}
+
+#new_review {
+  background-color: $unlocked-gray-light;
+  padding: 15px 15px 15px 15px;
+  border-bottom-left-radius: 24px;
+  border-bottom-right-radius: 24px;
+}
