updated photo tab styling

--- a/app/assets/stylesheets/pages/_lock_show.scss
+++ b/app/assets/stylesheets/pages/_lock_show.scss
@@ -54,3 +54,10 @@ text-align: left;
   border-bottom-left-radius: 24px;
   border-bottom-right-radius: 24px;
 }
+
+.new_photo {
+  background-color: $unlocked-gray-light;
+  padding: 15px 15px 15px 15px;
+  border-bottom-left-radius: 24px;
+  border-bottom-right-radius: 24px;
+}
