updated manifest to point to root directory

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -4,8 +4,8 @@
  "theme_color": "#00A79D",
   "background_color": "#00A79D",
   "display": "standalone",
-  "scope": "/",
-  "start_url": "https://unlocked.melbourne/",
+  "scope": "./",
+  "start_url": "<%= File.join(Rails.root, '/') %>",
   "description": "Explore Melbourne and unlock its secrets",
   "orientation": "any",
  "icons": [
