--- a/app/assets/images/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json.erb
+++ b/app/assets/images/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json.erb
@@ -5,7 +5,7 @@
   "background_color": "#00A79D",
   "display": "standalone",
   "scope": "/",
-  "start_url": "https://unlocked.melbourne/",
+  "start_url": "<%= File.join(Rails.root, '/') %>",
   "description": "Explore Melbourne and unlock its secrets",
   "orientation": "any",
  "icons": [
@@ -56,32 +56,32 @@
   },
   {
    "src": "android-icon-36x36.png",
-   "sizes": "37x37",
+   "sizes": "36x36",
    "type": "image\/png"
   },
   {
    "src": "android-icon-48x48.png",
-   "sizes": "49x49",
+   "sizes": "48x48",
    "type": "image\/png"
   },
   {
    "src": "android-icon-72x72.png",
-   "sizes": "73x73",
+   "sizes": "72x72",
    "type": "image\/png"
   },
   {
    "src": "android-icon-96x96.png",
-   "sizes": "97x97",
+   "sizes": "96x96",
    "type": "image\/png"
   },
   {
    "src": "android-icon-144x144.png",
-   "sizes": "145x145",
+   "sizes": "144x144",
    "type": "image\/png"
   },
   {
    "src": "android-icon-192x192.png",
-   "sizes": "193x193",
+   "sizes": "192x192",
    "type": "image\/png"
   }
  ]
