attempt to move manifest into different folder

--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -1,88 +1,124 @@
 {
- "name": "Melbourne Unlocked",
- "short_name": "Melb Unlocked",
- "theme_color": "#00A79D",
+  "name": "Melbourne Unlocked",
+  "short_name": "Melb Unlocked",
+  "theme_color": "#00A79D",
   "background_color": "#00A79D",
   "display": "standalone",
-  "scope": "./",
-  "start_url": "<%= File.join(Rails.root, '/') %>",
+  "scope": "/",
+  "start_url": "http://localhost:3000/",
   "description": "Explore Melbourne and unlock its secrets",
   "orientation": "any",
  "icons": [
   {
-  "src": "apple-icon-57x57",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-57x57",
   "sizes": "57x57",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-60x60",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-60x60",
   "sizes": "60x60",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-72x72",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-72x72",
   "sizes": "72x72",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-76x76",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-76x76",
   "sizes": "76x76",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-114x114",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-114x114",
   "sizes": "114x114",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-120x120",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-120x120",
   "sizes": "120x120",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-144x144",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-144x144",
   "sizes": "144x144",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-152x152",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-152x152",
   "sizes": "152x152",
   "type": "image\/png"
   },
   {
-  "src": "apple-icon-180x180",
+  "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-icon-180x180",
   "sizes": "180x180",
   "type": "image\/png"
   },
   {
-   "src": "android-icon-36x36.png",
-   "sizes": "37x37",
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/favicon-16x16.png",
+   "sizes": "16x16",
    "type": "image\/png"
   },
   {
-   "src": "android-icon-48x48.png",
-   "sizes": "49x49",
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-36x36.png",
+   "sizes": "36x36",
    "type": "image\/png"
   },
   {
-   "src": "android-icon-72x72.png",
-   "sizes": "73x73",
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-48x48.png",
+   "sizes": "48x48",
    "type": "image\/png"
   },
   {
-   "src": "android-icon-96x96.png",
-   "sizes": "97x97",
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-72x72.png",
+   "sizes": "72x72",
    "type": "image\/png"
   },
   {
-   "src": "android-icon-144x144.png",
-   "sizes": "145x145",
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-96x96.png",
+   "sizes": "96x96",
    "type": "image\/png"
   },
   {
-   "src": "android-icon-192x192.png",
-   "sizes": "193x193",
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-144x144.png",
+   "sizes": "144x144",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-192x192.png",
+   "sizes": "192x192",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/favicon-32x32.png",
+   "sizes": "32x32",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/favicon.ico",
+   "sizes": "16x16",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-144x144.png",
+   "sizes": "144x144",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-150x150.png",
+   "sizes": "150x150",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-310x310.png",
+   "sizes": "310x310",
+   "type": "image\/png"
+  },
+  {
+   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-70x70.png",
+   "sizes": "70x70",
    "type": "image\/png"
   }
+
  ]
 }
