--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,22 +3,22 @@
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-32x32.png" >
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-96x96.png" >
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-16x16.png" >
-    <link rel="manifest" href="/assets/dd8570372e8dc028cba6d1401302f28c.ico/manifest.json.erb">
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="36x36" href="/assets/android-icon-36x36.png" >
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/android-icon-96x96.png" >
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" >
+    <link rel="manifest" href="/manifest.json.erb">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/assets/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
