--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -55,7 +55,9 @@
           <div class="address_box">
             <div class="address_map">
               <div style="width: 120px; height: 120px; border-radius: 100%;">
-              <img src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/url-https%3A%2F%2Fwww.unlocked.melbourne%2Fassets%2Fmelbourne_unlocked_low_res.png(<%=@lock.longitude%>,<%= @lock.latitude%>)/<%=@lock.longitude%>,<%= @lock.latitude%>,15/120x120?access_token=<%= ENV['MAPBOX_API_KEY'] %>" alt="">
+              <img src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/url-https%3A%2F%2Fwww.darko-melb-unlocked.herokuapp.com%2Fassets%2Funlocked.png(<%=@lock.longitude%>,<%= @lock.latitude%>)/<%=@lock.longitude%>,<%= @lock.latitude%>,15/120x120?access_token=<%= ENV['MAPBOX_API_KEY'] %>" class="map-unlocked" alt="">
+              <img src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/url-https%3A%2F%2Fwww.darko-melb-unlocked.herokuapp.com%2Fassets%2Flocked.png(<%=@lock.longitude%>,<%= @lock.latitude%>)/<%=@lock.longitude%>,<%= @lock.latitude%>,15/120x120?access_token=<%= ENV['MAPBOX_API_KEY'] %>" class="map-locked" alt="">
+              <img src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/url-https%3A%2F%2Fwww.darko-melb-unlocked.herokuapp.com%2Fassets%2Funlockable.png(<%=@lock.longitude%>,<%= @lock.latitude%>)/<%=@lock.longitude%>,<%= @lock.latitude%>,15/120x120?access_token=<%= ENV['MAPBOX_API_KEY'] %>" class="map-unlockable" alt="">
               </div>
             </div>
             <div class="address_text">
