--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -1,10 +1,10 @@
 {
-  "name": "Melbourne Unlocked",
-  "short_name": "Melb Unlocked",
-  "theme_color": "#00A79D",
+ "name": "Melbourne Unlocked",
+ "short_name": "Melb Unlocked",
+ "theme_color": "#00A79D",
   "background_color": "#00A79D",
   "display": "standalone",
-  "scope": "/",
+  "scope": "./",
   "start_url": "http://localhost:3000/",
   "description": "Explore Melbourne and unlock its secrets",
   "orientation": "any",
@@ -55,11 +55,6 @@
   "type": "image\/png"
   },
   {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/favicon-16x16.png",
-   "sizes": "16x16",
-   "type": "image\/png"
-  },
-  {
    "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-36x36.png",
    "sizes": "36x36",
    "type": "image\/png"
@@ -88,37 +83,6 @@
    "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/android-icon-192x192.png",
    "sizes": "192x192",
    "type": "image\/png"
-  },
-  {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/favicon-32x32.png",
-   "sizes": "32x32",
-   "type": "image\/png"
-  },
-  {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/favicon.ico",
-   "sizes": "16x16",
-   "type": "image\/png"
-  },
-  {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-144x144.png",
-   "sizes": "144x144",
-   "type": "image\/png"
-  },
-  {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-150x150.png",
-   "sizes": "150x150",
-   "type": "image\/png"
-  },
-  {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-310x310.png",
-   "sizes": "310x310",
-   "type": "image\/png"
-  },
-  {
-   "src": "assets/dd8570372e8dc028cba6d1401302f28c.ico/ms-icon-70x70.png",
-   "sizes": "70x70",
-   "type": "image\/png"
   }
-
  ]
 }
