--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,5 +19,15 @@ html, body { height: calc(100% - 70px);}
 }
 
 .mapboxgl-map {
-  height: 85%;
+  position: relative;
+  z-index: 1;
+}
+
+.search-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  width: 100%;
 }
