--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <script src='https://unpkg.com/@turf/turf/turf.min.js'></script>
+    <script src='https://unpkg.com/@turf/turf/turf.min.js' defer></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <meta name="apple-mobile-web-app-capable" content="yes">
     </head>
