--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
     <%= csp_meta_tag %>
     <meta property="og:url" content="https://www.unlocked.melbourne/" />
     <meta property="og:title" content="Melbourne Unlocked" />
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="Explore Melbourne in the most rewarding way!" />
-    <meta property="og:image" content=../app/assets/melbourne_unlocked_banner2.png />
+    <meta property="og:image" content="/assets/melbourne_unlocked_banner2.png" />
+    <meta property="og:image:width" content="1200px" />
+    <meta property="og:image:height" content="630px" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
