changed og image to absoloute url

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,17 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="manifest" href="/manifest.json">
-
     <%= render 'shared/ios_pwa_links' %>
 
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta property="og:url" content="https://www.unlocked.melbourne/" />
     <meta property="og:title" content="Melbourne Unlocked" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Explore Melbourne in the most rewarding way!" />
-    <meta property="og:image" content="/assets/melbourne_unlocked_banner2.png" />
+    <meta property="og:image" content="https://www.unlocked.melbourne/assets/melbourne_unlocked_banner2.png" />
     <meta property="og:image:width" content="1200px" />
     <meta property="og:image:height" content="630px" />
 
