--- a/app/assets/stylesheets/components/_map_popups.scss
+++ b/app/assets/stylesheets/components/_map_popups.scss
@@ -10,7 +10,7 @@
   padding: 5px;
 }
 
-body > div.position-absolute.mapboxgl-map > div.mapboxgl-popup.mapboxgl-popup-anchor-center > div.mapboxgl-popup-content > button {
+.mapboxgl-popup-close-button {
   color: $unlocked_dark;
   border-radius: 100%;
   font-size: xx-large;
@@ -18,6 +18,11 @@ body > div.position-absolute.mapboxgl-map > div.mapboxgl-popup.mapboxgl-popup-an
   margin-bottom: 10px;
   top: 10px;
   right: 9px;
+
+}
+
+.mapboxgl-popup-close-button:hover {
+  background-color: $unlocked-light;
 }
 
 .ppopup {
