--- a/app/assets/stylesheets/components/_search_bar.scss
+++ b/app/assets/stylesheets/components/_search_bar.scss
@@ -4,12 +4,22 @@
   margin-top: 6px;
   display: flex;
   justify-content: center;
-  width: 280px;
+  width: 100%;
   height: 39px;
 }
 
 .search_bar #query {
-  width: 280px;
+  width: 370px;
+}
+
+.search-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  width: 100%;
+  box-sizing: 0;
 }
 
 .notice {
@@ -21,11 +31,12 @@
 }
 
 div.scrollmenu {
-  width: 300px;
+  width: 100%;
   display: flex;
-  overflow-x: scroll;
-  overflow-y: hidden;
-  white-space: nowrap;
+  justify-content: center;
+  // overflow-x: scroll;
+  // overflow-y: hidden;
+  // white-space: nowrap;
   padding: 0px;
   box-sizing: border-box;
 }
@@ -46,7 +57,8 @@ div.scrollmenu a {
 .btn-search {
   font-size: x-small;
   padding: 2px 5px 2px 5px;
-  margin-left: 3px;
+  margin-left: 1px;
+  margin-right: 1px;
   min-width: 40px;
   font-weight: 400;
   line-height: 1.5;
