--- a/app/views/locks/index.html.erb
+++ b/app/views/locks/index.html.erb
@@ -14,14 +14,14 @@
         %>
         <p class = "notice d-flex justify-content-center" id="notice"><%= notice %></p>
       </div>
-      <div>
+      <div class = ".btn-search-container">
         <div class="scrollmenu">
-          <%= button_to "All", locks_path, :method => :get, params: { query: ""  }, class: 'btn btn-primary btn-search' %>
+          <div><%= button_to "All", locks_path, :method => :get, params: { query: ""  }, class: 'btn btn-primary btn-search' %></div>
           <%= button_to "Locked", locks_path, :method => :get, params: { user_id: current_user, query: ""  }, class: 'btn btn-primary btn-search' %>
           <%= button_to "Unlocked", locks_path, :method => :get, params: { user_id: current_user}, class: 'btn btn-primary btn-search' %>
           <%= button_to "Art", locks_path, :method => :get, params: { query: "art" }, class: 'btn btn-primary btn-search' %>
           <%= button_to "Statues", locks_path, :method => :get, params: { query: "statue" }, class: 'btn btn-primary btn-search' %>
-          <%= button_to "Buildings", locks_path, :method => :get, params: { query: "architectural" }, class: 'btn btn-primary btn-search' %>
+          <%= button_to "Architectural", locks_path, :method => :get, params: { query: "architectural" }, class: 'btn btn-primary btn-search' %>
           <%= button_to "Nature", locks_path, :method => :get, params: { query: "nature" }, class: 'btn btn-primary btn-search' %>
         </div>
       </div>
