added fix for double load issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     <script src='https://unpkg.com/@turf/turf/turf.min.js' defer></script>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="turbolinks-cache-control" content="no-cache">
     </head>
 
   <body>
