added styling to admin review page

--- a/app/views/locks/new_lock.html.erb
+++ b/app/views/locks/new_lock.html.erb
@@ -1,2 +1,17 @@
 <title>Thank you for submitting a lock</title>
-<h1>Thank you for submitting a lock, it will be live once an admin reviews it!</h1>
+<div class = "container">
+  <br>
+  <h1>Thank you for submitting a lock</h1>
+  <div class="center">
+    <div class="next-icon">
+      <i class="fa-solid fa-angles-down"></i>
+    </div>
+
+    <h1><i class="fa-solid fa-location-pin-lock"></i> What's next?</h1>
+    <br>
+      <p><strong>1. </strong>Your submission will be reviewed by our admin team shortly</p>
+      <p><strong>2.  </strong> You will receive a notification once your lock has been accepted.</p>
+      <br>
+    <%= link_to 'back to home', root_path, :class => "btn btn-primary"%>
+  </div>
+</div>
