fixed stars and did some minor stlye changes

--- a/app/assets/stylesheets/components/_map_popups.scss
+++ b/app/assets/stylesheets/components/_map_popups.scss
@@ -26,7 +26,11 @@
 }
 
 .ppopup {
-  color: $unlocked_blue;
+  color: $unlocked_dark;
+  // font-weight: bold;
+}
+.ppopup a{
+  color: $unlocked_dark;
   // font-weight: bold;
 }
 
