--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import "components/index";
 @import "pages/index";
 
-html, body { height: calc(100% - 70px);}
+html, body { height: calc(100% - 10%);}
 
 .center {
   text-align: center;
@@ -22,5 +22,3 @@ html, body { height: calc(100% - 70px);}
   position: relative;
   z-index: 1;
 }
-
-
