--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -92,7 +92,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              <p class="mb-0"><i class="fa-solid fa-star"></i> Share your experince!</p>
+              <p class="mb-0"><i class="fa-solid fa-star"></i> Share your experience!</p>
               </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -137,7 +137,7 @@
           </div>
         <% end %>
       <% else %>
-        <div class="center"><p> There arent any reviews yet. We challenge you to be the first! </p>
+        <div class="center"><p> There aren't any reviews yet. We challenge you to be the first! </p>
         </div>
       <% end %>
     </div>
@@ -193,7 +193,7 @@
             </button>
           </div>
       <% else %>
-        <div class="center"><p> There arent any photos to share yet. We challenge you to be the first! </p>
+        <div class="center"><p> There aren't any photos to share yet. We challenge you to be the first! </p>
         </div>
       <% end %>
     </div>
