--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,3 +36,4 @@
   </div>
 </div>
 </div>
+<div class="desktop-notice"><p class="mb-0"><strong><i class="fa-solid fa-circle-exclamation"></i> HINT: </strong> For best experince, view on your mobile or tablet!</div>
