--- a/app/views/locks/index.html.erb
+++ b/app/views/locks/index.html.erb
@@ -1,8 +1,4 @@
-
-
-
   <title>Melbourne Unlocked</title>
-
   <div class= "search-container">
     <div>
       <div class = "search_bar">
@@ -29,7 +25,7 @@
     </div>
   </div>
 
-  <div style="width: 100%; height: 100%;"
+  <div id="map"
     data-controller="mapbox"
     data-mapbox-markers-value="<%= @markers.to_json %>"
     data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
