--- a/app/views/locks/new.html.erb
+++ b/app/views/locks/new.html.erb
@@ -1,4 +1,5 @@
 <title>Suggest a New Lock</title>
+<div class="desktop-container">
 <div class="new-lock-container">
   <h1>Want to suggest a lock?</h1>
   <br>
@@ -20,3 +21,4 @@
     </div>
 </div>
 <br>
+</div>
