--- a/app/views/locks/new_lock.html.erb
+++ b/app/views/locks/new_lock.html.erb
@@ -1,4 +1,5 @@
 <title>Thank you for submitting a lock</title>
+<div class="desktop-container">
 <div class = "container">
   <br>
   <h1>Thank you for submitting a lock</h1>
@@ -14,4 +15,5 @@
       <br>
     <%= link_to 'back to home', root_path, :class => "btn btn-primary"%>
   </div>
+</div>
 </div>
