--- a/app/views/locks/show.html.erb
+++ b/app/views/locks/show.html.erb
@@ -1,4 +1,5 @@
 <title><%= @lock.name %></title>
+<div class="desktop-container">
 <div class="profile_banner">
   <%= cl_image_tag(@lock.photo.key, class: "avatar") %>
   <h1><%= @lock.name %></h1>
@@ -200,3 +201,4 @@
   </div>
 </div>
 <br>
+</div>
