--- a/app/views/locks/view_requests.html.erb
+++ b/app/views/locks/view_requests.html.erb
@@ -1,4 +1,5 @@
 <title>View Requests</title>
+<div class="desktop-container">
 <h1 style="margin-top: 10px; margin-bottom: 10px;">View all locks submissions</h1>
 <div class="container">
     <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
@@ -67,4 +68,5 @@
     </div>
     </div>
   </div>
+</div>
 </div>
