--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,11 @@ html, body { height: calc(100% - 10%);}
   color: $unlocked-light;
 }
 
+#map {
+  width: 100%;
+  height: 100%;
+}
+
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .desktop-container{
@@ -55,10 +60,7 @@ html, body { height: calc(100% - 10%);}
     border-color: $unlocked-light;
     margin-top: 20px;
     border-radius: 25px 25px 0px 0px;
-  }
-
- .leader_page {
-    border-radius: 25px 25px 0px 0px;
+    height: 100%;
   }
   .profile_banner {
     border-radius: 25px 25px 0px 0px;
@@ -68,5 +70,16 @@ html, body { height: calc(100% - 10%);}
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+  }
+
+  #map {
+    margin-top: 20px;
+    border-radius: 25px 25px 0px 0px;
+    height: calc(100% - 6.5%);
+    width: 992px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-color: $unlocked-light;
   }
  }
