--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <title>Sign up - Melbourne Unlocked</title>
+<div class="desktop-container">
 <div class="container justify-content-center">
 <h2>Sign up</h2>
 <p>Start unlocking locks and having an adventure in Melbourne today!</p>
@@ -31,4 +32,5 @@
 <% end %>
 <br>
 <%= render "devise/shared/links" %>
+</div>
 </div>
