--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,3 +1,4 @@
+<div class="desktop-container">
 <title><%= @user.username %>'s Profile</title>
 <div class="profile_banner">
         <%= cl_image_tag(@user.photo.key, class: "avatar") %>
@@ -40,3 +41,4 @@
 </div>
 </div>
 <br>
+</div>
